--- a/Crypto.ipynb
+++ b/Crypto.ipynb
@@ -6,7 +6,7 @@
       "name": "Crypto.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMsWMe0aQ1eN+XtZQh6heb+",
+      "authorship_tag": "ABX9TyMTQ6gKTCGPyZAtxFcY3Xi3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "id": "OE_qw-DDVCoH"
       },
       "source": [
-        "# **Stock Market Chart**\n"
+        "# **Crypto Market Chart**\n"
       ]
     },
     {
